# curso-de-verao-fatec-2023-1

./: .dockerignore  .env  .gitignore  .test.env  Dockerfile  Makefile  README.md  apm-server.yml  docker-compose.yaml  heartbeat.yml  init.sql  pyproject.toml
.github/workflows/: install_lint_test.yml
migrations/versions/: 39f124e4aa26_initial_migration.py  3eb019990bdb_todo_model.py
slides/: Observabilidade e Rastreabilidade de Aplicações Web.odp  Observabilidade e Rastreabilidade de Aplicações Web.pptx
src/: app.py  config.py
src/auth/: exceptions.py  forms.py  models.py
src/auth/blueprints/webui/: __init__.py  views.py
src/blueprints/restapi/: __init__.py  resources.py
src/blueprints/webui/: __init__.py  views.py
src/ext/: apm.py  appearance.py  auth.py  configuration.py  database.py  migrations.py
src/templates/: base.html  navbar.html
src/templates/auth/: auth.html
src/templates/todo/: todo-item.html  todos.html
src/todo/: forms.py  models.py
src/todo/blueprints/webui/: __init__.py  views.py
tests/: conftest.py  factory.py
tests/auth/: test_models.py
